Anpassung der Texte in der index.html für die Taste a

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <p>Wenn die Drehung nicht kontinuierlich ist, kann mit Hilde der Buttons jeweils ein Schritt nach links
             oder rechts gegangen werden. Ebenso können die Tasten "l" (links) und "r" (rechts) verwendet werden.
+            Zusätzlich kann auch mit der Taste "a" die Drehung an- bzw. bei nochmaligen Drücken ausgeschaltet werden.
         </p>
     </div>
 
